AIC-P10/01-Network.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Configuration du reseau 

Parameters:

  VpcCidrBlock:
    Type: String 
    MinLength: '9'
    MaxLength: '18'    
    Default: 10.0.0.0/16
    Description: Saisir le reseau du VPC sous notation CIDR.
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: "Doit être une adresse valide sous la notation : x.x.x.x/x "

Resources:

  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      Tags:
        - Key: Name
          Value: "P10"


#### AZA ####

  SubnetAZA:
    Type: AWS::EC2::Subnet
    Properties:      
      AvailabilityZone: eu-west-3a
      CidrBlock: !Select [10, !Cidr [ !GetAtt myVPC.CidrBlock, 11, 8 ]]
      Tags:
        - Key: Name
          Value: 'AZA Subnet'
      VpcId: !Ref myVPC

  RouteTableAZA:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags: 
        - Key: Name
          Value: SubnetAZA-RouteTable
      VpcId: !Ref myVPC

  SubnetRouteTableAssociationAZA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTableAZA
      SubnetId: !Ref SubnetAZA
    DependsOn: 
      - SubnetAZA
      - RouteTableAZA

  RouteAZA:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref myInternetGateway
      RouteTableId: !Ref RouteTableAZA

#### AZB ####
  SubnetAZB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-3b
      CidrBlock: !Select [20, !Cidr [ !GetAtt myVPC.CidrBlock, 21, 8 ]]
      Tags:
        - Key: Name
          Value: 'AZB Subnet'
      VpcId: !Ref myVPC

  RouteTableAZB:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags: 
        - Key: Name
          Value: SubnetAZB-RouteTable
      VpcId: !Ref myVPC

  SubnetRouteTableAssociationAZB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetAZB
      RouteTableId: !Ref RouteTableAZB
    DependsOn: 
      - SubnetAZB
      - RouteTableAZB

  RouteAZB:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref myInternetGateway
      RouteTableId: !Ref RouteTableAZB

#### AZC ####
  SubnetAZC:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: eu-west-3c
      CidrBlock: !Select [30, !Cidr [ !GetAtt myVPC.CidrBlock, 31, 8 ]]
      Tags:
        - Key: Name
          Value: "AZC Subnet"
      VpcId: !Ref myVPC

  RouteTableAZC:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: SubnetAZC-RouteTable

  SubnetRouteTableAssociationAZC:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetAZC
      RouteTableId: !Ref RouteTableAZC

  RouteDefaultAZC:
    Type: "AWS::EC2::Route"
    DependsOn: myInternetGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref myInternetGateway
      RouteTableId: !Ref RouteTableAZC
####

  myInternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: myInternetGateway

  AttachInternetGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref myVPC
      InternetGatewayId: !Ref myInternetGateway

Outputs:

  AZASubnetCidr:
    Description: "AZA's CIDR Subnet block"
    Value: !Select [10, !Cidr [ !GetAtt myVPC.CidrBlock, 11, 8 ]]
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", SubnetAZACidr ] ]
      
  AZBSubnetCidr:
    Description: "AZB's CIDR Subnet block"
    Value: !Select [20, !Cidr [ !GetAtt myVPC.CidrBlock, 21, 8 ]]
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", SubnetAZBCidr ] ]

  AZCSubnetCidr:
    Description: "AZC's CIDR Subnet block"
    Value: !Select [30, !Cidr [ !GetAtt myVPC.CidrBlock, 31, 8 ]]
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", SubnetAZCCidr ] ]

  SubnetAZAId:
    Description: "The AZA's Subnet ID"
    Value: !Ref SubnetAZC
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", SubnetAZAId ] ]

  SubnetAZBId:
    Description: "The AZB's Subnet ID"
    Value: !Ref SubnetAZB
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", SubnetAZBId ] ]

  SubnetAZCId:
    Description: "The AZC's Subnet ID"
    Value: !Ref SubnetAZC
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", SubnetAZCId ] ]

  VPCId:
    Description: "VPC ID"
    Value: !Ref myVPC
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", VPCId ] ]

  VPCCIDR:
    Description: "VPC CIDR"
    Value: !Ref VpcCidrBlock
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", VPCCIDR ] ]

  Gateway:
    Description: "Gateway Address"
    Value: !Ref myEIP
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", InternetGatewayId ] ]

  myS3BucketOut:
    Description: "S3 bucket name"
    Value: !Ref myS3Bucket
